Newsfeed - add more listener and fix bugs

--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
@@ -8,6 +8,10 @@
                             ng-options="type.name for type in nfNodeType" class="form-control pull-right" style="float: right; max-width: 300px; text-transform: capitalize;">
                         <option value="">-- Filter --</option>
                     </select>
+                    <select name="show-filter" ng-model="filterDateDropDown"
+                            ng-options="type.name for type in nfFilterDate" class="form-control pull-right" style="float: right; max-width: 200px; text-transform: capitalize;  margin-right: 10px;">
+                        <option value="">-- Date Filter --</option>
+                    </select>
                     <form class="form-inline" style="max-width: 200px; float: right; margin-right: 10px; margin-top: 3px;">
                         <input type="text" ng-model="query" placeholder="Search"/>
                     </form>
@@ -44,7 +48,7 @@
                                             <!--<b>{{nfData.userId.displayName}}</b> <span ng-show="'{{nfData.actionSubject}}' != 'canceled vote'">{{nfData.actionType}}</span> {{nfData.actionSubject}}<span ng-show="'{{nfData.actionType}}' == 'added'"> </span>
                                             <a><b>{{nfData.actionName}}</b></a>-->
 
-                                            <b>{{nfData.userId.displayName | capitalize}}</b> {{nfData.actionType}} {{nfData.actionSubject}}
+                                            <b>{{nfData.userId.displayName | capitalize}}</b> {{nfData.actionType}} <span ng-if="nfData.actionType == 'replied'">to</span>  {{nfData.actionSubject}} <span ng-if="nfData.actionSubject == 'pdf annotation' || nfData.actionSubject == 'video annotation'">in</span>
                                             <a ng-show="nfData.actionSubject == 'pdf annotation'" href="#/cid/{{curUrl.courseId}}/nid/{{curUrl.nodeId}}?tab=pdf"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'video annotation'" href="#/cid/{{curUrl.courseId}}/nid/{{curUrl.nodeId}}?tab=video"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'link'" href="#/cid/{{curUrl.courseId}}/nid/{{curUrl.nodeId}}?tab=links"><b>{{nfData.actionName | capitalize}}</b></a>
