--- a/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
+++ b/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
@@ -8,6 +8,10 @@
                             ng-options="type.name for type in nfType" class="form-control pull-right" style="float: right; max-width: 300px; text-transform: capitalize;">
                         <option value="">-- Filter --</option>
                     </select>
+                    <select name="show-filter" ng-model="filterDateDropDown"
+                            ng-options="type.name for type in nfFilterDate" class="form-control pull-right" style="float: right; max-width: 200px; text-transform: capitalize; margin-right: 10px;">
+                        <option value="">-- Date Filter --</option>
+                    </select>
                     <form class="form-inline" style="max-width: 200px; float: right; margin-right: 10px; margin-top: 3px;">
                         <input type="text" ng-model="query" placeholder="Search"/>
                     </form>
@@ -43,13 +47,13 @@
                                         <div class="product-info">
                                             <!--<b>{{nfData.userId.displayName}}</b> <span ng-show="'{{nfData.actionSubject}}' != 'canceled vote'">{{nfData.actionType}}</span> {{nfData.actionSubject}}<span ng-show="'{{nfData.actionType}}' == 'added'"> </span>
                                             <a><b>{{nfData.actionName}}</b></a>-->
-                                            <b>{{nfData.userId.displayName | capitalize}}</b> {{nfData.actionType}} <span ng-if="nfData.actionType == 'enrolled'">in</span> {{nfData.actionSubject}}
-                                            <a ng-show="nfData.actionSubject == 'content node' || nfData.actionSubject == 'node' || nfData.actionSubject == 'sub topic'" href="#/cid/{{curUrl.courseId}}?tab=map"><b>{{nfData.actionName | capitalize}}</b></a>
+                                            <b>{{nfData.userId.displayName | capitalize}}</b> {{nfData.actionType}} <span ng-if="nfData.actionType == 'enrolled'">in</span><span ng-if="nfData.actionType == 'replied'">to</span> {{nfData.actionSubject}} <span ng-if="nfData.actionSubject == 'pdf annotation' || nfData.actionSubject == 'video annotation'">in</span>
+                                            <a ng-show="nfData.actionSubject == 'content node' || nfData.actionSubject == 'node' || nfData.actionSubject == 'sub topic'" href="#/cid/{{curUrl.courseId}}/nid/{{nfData.nodeId}}?tab=map"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'discussion'" href="#/cid/{{curUrl.courseId}}?tab=discussion"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <a ng-show="nfData.actionSubject == 'course'" href="#/cid/{{curUrl.courseId}}?tab=preview"><b>{{nfData.actionName | capitalize}}</b></a>
-                                            <a ng-show="nfData.actionSubject == 'pdf annotation'" href="#/cid/{{curUrl.courseId}}/nid/{{curUrl.nodeId}}?tab=pdf"><b>{{nfData.actionName | capitalize}}</b></a>
-                                            <a ng-show="nfData.actionSubject == 'video annotation'" href="#/cid/{{curUrl.courseId}}/nid/{{curUrl.nodeId}}?tab=video"><b>{{nfData.actionName | capitalize}}</b></a>
-                                            <a ng-show="nfData.actionSubject == 'link'" href="#/cid/{{curUrl.courseId}}/nid/{{curUrl.nodeId}}?tab=links"><b>{{nfData.actionName | capitalize}}</b></a>
+                                            <a ng-show="nfData.actionSubject == 'pdf annotation'" href="/treeNode/{{nfData.nodeId}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId}}?tab=pdf"><b>{{nfData.actionName | capitalize}}</b></a>
+                                            <a ng-show="nfData.actionSubject == 'video annotation'" href="/treeNode/{{nfData.nodeId}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId}}?tab=video"><b>{{nfData.actionName | capitalize}}</b></a>
+                                            <a ng-show="nfData.actionSubject == 'link'" href="/treeNode/{{nfData.nodeId}}/#/cid/{{nfData.courseId}}/nid/{{nfData.nodeId}}?tab=links"><b>{{nfData.actionName | capitalize}}</b></a>
                                             <br/>
                                             <small class="text-muted">
                                                 <i class="fa fa-clock-o"> {{nfData.dateAdded | relativeDate}}</i>
