--- a/views/admin-lte/course/analytics/analytics.ejs
+++ b/views/admin-lte/course/analytics/analytics.ejs
@@ -10,7 +10,9 @@
     </div>
     <div class="grid-stack-item"
          data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="w{{wdg._id}}">
+         ng-repeat="wdg in widgets" id="w{{wdg._id}}"
+         on-finish-render="afterAllWidgetsRendered"
+    >
         <div class="grid-stack-item-content">
 
             <div class="box no-shadow">
