Widget - My Analytics Summary - bug fixes

--- a/views/my-course/activity-summary.ejs
+++ b/views/my-course/activity-summary.ejs
@@ -26,9 +26,9 @@
                     <div class="col-xs-6">
                         <div class="small-box">
                             <div class="inner">
-                                <p align="center">Node Activity Summary</p>
+                                <p align="center">Course Activity Summary</p>
                                 <canvas id="pie" class="chart chart-pie"
-                                        chart-data="nodeActivityData" chart-labels="nodeActivityLabels" chart-legend="true">
+                                        chart-data="courseActivityData" chart-labels="courseActivityLabels" chart-legend="true">
                                 </canvas>
                             </div>
                         </div>
