avoid showing deleted cats, course, nodes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -102,8 +102,12 @@ a.profile-picture {
   cursor: move
 }
 
-.ng-cloak, [ng-cloak], [ng\:cloak] {
+.ng-cloak, [ng-cloak], [ng\:cloak], .hideOnError {
   display: none !important
+}
+
+.showOnError{
+    display: block;
 }
 
 .form_hover {
