--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -57,6 +57,7 @@
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
 <script src="/admin-lte/js/libs.js" type="text/javascript"></script>
+<script src="/l2p-specific/js/iframeResizer.js"></script>
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <script src="/slide-viewer/js/autosize.input.min.js"></script>
 <script src="/slide-viewer/js/jquery.simplecolorpicker.js"></script>
