fixed some is in iframe stuff

--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -1,6 +1,6 @@
 <% if(isInIframe && course && course.settings && course.settings['disableTop']){ %>
 <% } else { %>
-<section class="content-header">
+<section class="content-header main-breadcrumb">
     <ol class="breadcrumb">
         <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="/courses/#/category/{{course.category.slug}}"> </i> {{course.category.name}}</a></li>
