--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -15,4 +15,19 @@
 <!--Add angular chart to wrap whole tabs here-->
 <script src="/chartjs/Chart.min.js"></script>
 <script src="/chartjs/angular-chart.min.js"></script>
+<% if(course != undefined && course.settings && course.settings['disableTop'] !== undefined && course.settings['disableTop']){%>
+<script>
+    if(window.location.href.indexOf('iframe=true') > -1){
+        $('header').remove();
+        $('.main-breadcrumb').remove();
+    }
+</script>
+<% } else if(typeof(treeNode) != 'undefined' && treeNode.settings && treeNode.settings['disableTop'] !== undefined && treeNode.settings['disableTop']){%>
+<script>
+    if(window.location.href.indexOf('iframe=true') > -1){
+        $('header').remove();
+        $('.main-breadcrumb').remove();
+    }
+</script>
+<% } %>
 <% include ../footer %>
