--- a/views/admin-lte/catalogs/nodeConfigModal.ejs
+++ b/views/admin-lte/catalogs/nodeConfigModal.ejs
@@ -46,10 +46,14 @@
                             </div>
 
                             <br>
-                            <% if(isInIframe){ %>
+                            <% if(isInIframe && treeNode.settings && treeNode.settings['disableTop'] !== undefined){ %>
                             <% } else { %>
                             <div class="control-group">
-                                <label class="control-label" for="description">Embed Settings</label>
+                                <label class="control-label">Embed Settings<br>
+                                    <small>These settings will take effect only if the page is loaded through an
+                                        iframe.
+                                    </small>
+                                </label>
                                 <div class="form-group">
                                     <%
                                         var dc = false;
