- Solution Module Completed with all the basic functionality - Validation Checks and Polishing still pending

--- a/views/admin-lte/course/peerAssessment/peerAssessment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerAssessment.ejs
@@ -4,12 +4,16 @@
     <% include editAssignmentModal%>
     <% include confirmDeleteAssignmentModal %>
     <% include addEditSolutionModal%>
+    <% include confirmDeleteSolutionModal %>
 </div>
 <script type="text/ng-template" id="viewAssignment.tpl">
     <% include viewAssignment%>
 </script>
 <script type="text/ng-template" id="seeAllSolutions.tpl">
     <% include seeAllSolutions%>
+</script>
+<script type="text/ng-template" id="viewSolution.tpl">
+    <% include viewSolution%>
 </script>
 <script type="text/ng-template" id="main.tpl">
     <div>
