change screenshot on info page

--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -45,10 +45,9 @@
                         <div class="col-xs-12 col-sm-6">
                             Implemented by R. Laksono. <br><br>
 
-                            Course Map Tool allows course participants to collaborate on creating or modifying course
-                            structures.
-                            The course structures are visualised as mind map. In it, participants can add course
-                            materials such as PDF, Videos and Links.
+                            Tool to collaboratively organise lecture materials, visualised as a mind-map view of the
+                            course that lets users organize the course topics in a map-based form where each node
+                            contains a lecture video or slides (PDF).
                         </div>
                     </div>
                 </div>
@@ -91,6 +90,20 @@
                 <div class="box-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6"> Implemented by Z. Sofyan.<br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-header"><h4>Additional Team Members</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <ul>
+                                <li>Ahmed Mohamed Fahmy Yousef (M.Sc.)
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
