add appName as widget group

--- a/views/admin-lte/cm-admin/applications.ejs
+++ b/views/admin-lte/cm-admin/applications.ejs
@@ -43,7 +43,7 @@
                             {{widget.name}}
                         </td>
                         <td>
-                            {{widget.application}}
+                            {{widget.applicationName}}
                         </td>
                         <td>
                             <button class="btn btn-sm btn-primary" ng-show="!widget.isActive"
@@ -90,7 +90,7 @@
                             {{widget.name}}
                         </td>
                         <td>
-                            {{widget.application}}
+                            {{widget.applicationName}}
                         </td>
                         <td>
                             <button class="btn btn-sm btn-primary" ng-show="!widget.isActive"
@@ -137,7 +137,7 @@
                             {{widget.name}}
                         </td>
                         <td>
-                            {{widget.application}}
+                            {{widget.applicationName}}
                         </td>
                         <td>
                             <button class="btn btn-sm btn-primary" ng-show="!widget.isActive"
@@ -184,7 +184,7 @@
                             {{widget.name}}
                         </td>
                         <td>
-                            {{widget.application}}
+                            {{widget.applicationName}}
                         </td>
                         <td>
                             <button class="btn btn-sm btn-primary" ng-show="!widget.isActive"
