Widget - Implement highchart to display course and node history charts

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -47,6 +47,9 @@
 <script src="/js/heartbeat/video-pulse.js"></script>
 <script src="/build/video-annotations.js"></script>
 
+<script src="/bower/highcharts/highstock.js"></script>
+<script src="/bower/highcharts-ng/dist/highcharts-ng.min.js"></script>
+
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <!-- slide-viewer stuff -->
 <script src="/slide-viewer/js/jquery.fullscreen-min.js"></script>
