--- a/views/course-analytics/history-analytics.ejs
+++ b/views/course-analytics/history-analytics.ejs
@@ -1,40 +1,10 @@
 <div class="box-body no-padding"  ng-controller="BarHistoryAnalyticsController">
 
-    <!--Using chartjs unfortunately does not work with tab-->
     <div class="nav-tabs-custom">
-        <!--Tabs within a box-->
-        <ul class="nav nav-tabs pull-right" ng-init="tab = 1">
-            <li class="active"><a href ng-click="tab = 1" data-toggle="tab">Enrolled Participants</a></li>
-            <li><a href ng-click="tab = 2" data-toggle="tab">Discussions</a></li>
-            <li><a href ng-click="tab = 3" data-toggle="tab">PDF Materials</a></li>
-            <li><a href ng-click="tab = 4" data-toggle="tab">Video Materials</a></li>
-        </ul>
-        <br>
-
-        <div class="enrolled-user-chart no-padding" ng-show="tab ===1">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataEnrolledUserMonthly"
-                    chart-labels="labelEnrolledUserMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center; font-weight: 500">Monthly data of enrolled participants in this course</div>
+        <div class="row">
+            <div class="col-xs-11">
+                <highchart id="chart1" config="chartConfig"></highchart>
+            </div>
         </div>
-        <div class="discussion-chart" ng-show="tab === 2">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataDiscussionMonthly"
-                    chart-labels="labelDiscussionMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center; font-weight: 500"">Monthly data of discussion topics created in this course</div>
-        </div>
-        <div class="pdf-chart" ng-show="tab === 3">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataPdfUploadMonthly"
-                    chart-labels="labelPdfUploadMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center; font-weight: 500"">Monthly data of uploaded PDF materials in this course</div>
-        </div>
-        <div class="video-chart" ng-show="tab === 4">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataVideoUploadMonthly"
-                    chart-labels="labelVideoUploadMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center; font-weight: 500"">Monthly data of uploaded video materials in this course</div>
-        </div>
-
     </div><!-- /.nav-tabs-custom -->
 </div>
