--- a/views/node-analytics/node-history-analytics.ejs
+++ b/views/node-analytics/node-history-analytics.ejs
@@ -1,34 +1,9 @@
 <div class="box-body no-padding"  ng-controller="NodeHistoryAnalyticsController">
-
-
     <div class="nav-tabs-custom">
-        <!--Tabs within a box-->
-        <ul class="nav nav-tabs pull-right" ng-init="tab = 1">
-            <li class="active"><a href ng-click="tab = 1" data-toggle="tab">PDF Annotations</a></li>
-            <li><a href ng-click="tab = 2" data-toggle="tab">Video Annotations</a></li>
-            <li><a href ng-click="tab = 3" data-toggle="tab">Links</a></li>
-        </ul>
-        <br>
-
-        <div class="pdf-annotation-chart no-padding" ng-show="tab ===1">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataPdfAnnotationMonthly"
-                    chart-labels="labelPdfAnnotationMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center;">Monthly data of annotated pdf created in this node</div>
+        <div class="row">
+            <div class="col-xs-11">
+                <highchart id="chart3" config="chartNodeConfig"></highchart>
+            </div>
         </div>
-        <div class="video-annotation-chart" ng-show="tab === 2">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataVideoAnnotationMonthly"
-                    chart-labels="labelVideoAnnotationMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center;">Monthly data of annotated video created in this node</div>
-        </div>
-        <div class="links-chart" ng-show="tab === 3">
-            <canvas id="bar" width="500" height="135" class="chart chart-line" chart-data="dataLinksMonthly"
-                    chart-labels="labelLinksMonthly">
-            </canvas>
-            <div class="small-box-footer" style="text-align: center;">Monthly data of related link submitted in this node</div>
-        </div>
-
-
     </div><!-- /.nav-tabs-custom -->
 </div>
