Add about us analytics description

--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -89,7 +89,17 @@
                 </div>
                 <div class="box-body">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6"> Implemented by Z. Sofyan.<br>
+                        <div class="col-xs-12 col-sm-6">
+                            <img src="/img/analytics.png" style="width: 100%">
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6">
+                            Implemented by Z. Sofyan. <br><br>
+
+                            Feature in the CourseMapper that provides analytics function in the various location to
+                            help teacher and participants achieve learning objectives such as monitoring courses/course materials and the activity happened inside the platform,
+                            gives content awareness, provides feedback and course/material recommendation, also to reflect and motivate learning progress of each participant.
+
                         </div>
                     </div>
                 </div>
