--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdateActionBar.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdateActionBar.ejs
@@ -1,3 +1,3 @@
 <div style="margin-right: 15px;">
-    Content node activity in the last 30 days
+    Content node activities in the last 30 days
 </div>
