--- a/views/my-course/created-courses.ejs
+++ b/views/my-course/created-courses.ejs
@@ -9,9 +9,10 @@
                             {{created.name}} <i class="fa fa-caret-down"></i>
                         </a>
                     </h4>
-                    <small class="label label-success pull-right" style="font-size: 13px; cursor: pointer;" title="number of discussion you created"><i class="fa fa-comments-o"></i> {{(myDiscussionStatus | filter:isDiscussion | filter:isTrue | filter:(created._id)).length}}</small>
-                    <small class="label label-success pull-right" style="font-size: 13px; margin-right: 2px; cursor: pointer;" title="number of Pdf material you added"><i class="fa fa-file-pdf-o"></i> {{(courseCreatedResources | filter:isPdf | filter:(created._id) | filter:(created.createdBy)).length}}</small>
-                    <small class="label label-success pull-right" style="font-size: 13px; margin-right: 2px; cursor: pointer;" title="number of video material you added"><i class="fa fa-file-movie-o"></i> {{(courseCreatedResources | filter:isVideo | filter:(created._id) | filter:(created.createdBy)).length}}</small>
+                    <small class="label label-success pull-right" style="font-size: 13px; cursor: context-menu;" title="number of discussion you created"><i class="fa fa-comments-o"></i> {{(myDiscussionStatus | filter:isDiscussion | filter:isTrue | filter:(created._id)).length}}</small>
+                    <small class="label label-success pull-right" style="font-size: 13px; margin-right: 2px; cursor: context-menu;" title="number of Pdf material you added"><i class="fa fa-file-pdf-o"></i> {{(courseCreatedResources | filter:isPdf | filter:(created._id) | filter:(created.createdBy)).length}}</small>
+                    <small class="label label-success pull-right" style="font-size: 13px; margin-right: 2px; cursor: context-menu;" title="number of video material you added"><i class="fa fa-file-movie-o"></i> {{(courseCreatedResources | filter:isVideo | filter:(created._id) | filter:(created.createdBy)).length}}</small>
+                    <a type="button" class="btn btn-default btn-xs pull-right" style="font-size: 13px; margin-right: 2px; " href="/course/{{created.slug}}/#/cid/{{created._id}}">Go</a>
                 </div>
                 <div id="collapse-created{{$index}}" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                     <div class="box-body">
@@ -20,15 +21,15 @@
                                 <tr ng-repeat="resource in courseCreatedResources | orderBy: 'treeNodeId.name'" ng-if="resource.courseId == created._id && resource.treeNodeId.name">
                                     <td ng-if="resource.type=='pdf'">
                                             <i class="fa fa-file-pdf-o"></i> {{resource.treeNodeId.name}}
-                                        <small class="label label-primary pull-right" style="font-size: 12px; cursor: pointer;" title="number of pdf annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-pdf-o"></i> {{(myNodeActivity | filter:isPdfAnno | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
-                                        <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px; cursor: pointer;" title="number of link you created"><i class="fa fa-link"></i> {{(myNodeActivity | filter:isLink | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
-                                        <small class="badge bg-light-blue pull-right" style="font-size: 12px; margin-right: 2px; cursor: pointer;" ng-if="resource.createdBy == created.createdBy" title="you created this content node">mine</small>
+                                        <small class="label label-primary pull-right" style="font-size: 12px; cursor: context-menu;" title="number of pdf annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-pdf-o"></i> {{(myNodeActivity | filter:isPdfAnno | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px; cursor: context-menu;" title="number of link you created"><i class="fa fa-link"></i> {{(myNodeActivity | filter:isLink | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <small class="badge bg-light-blue pull-right" style="font-size: 12px; margin-right: 2px; cursor: context-menu;" ng-if="resource.createdBy == created.createdBy" title="you created this content node">mine</small>
                                     </td>
                                     <td ng-if="resource.type!='pdf'">
                                             <i class="fa fa-file-movie-o"></i> {{resource.treeNodeId.name}}
-                                        <small class="label label-primary pull-right" style="font-size: 12px; cursor: pointer;" title="number of video annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-movie-o"></i> {{(myNodeActivity | filter:isVideoAnno | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
-                                        <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px; cursor: pointer;" title="number of link you created"><i class="fa fa-link"></i> {{(myNodeActivity | filter:isLink | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
-                                        <small class="badge bg-light-blue pull-right" style="font-size: 12px; margin-right: 2px; cursor: pointer;" ng-if="resource.createdBy == created.createdBy" title="you created this content node">mine</small>
+                                        <small class="label label-primary pull-right" style="font-size: 12px; cursor: context-menu;" title="number of video annotation you created"><i class="fa fa-pencil"></i> <i class="fa fa-file-movie-o"></i> {{(myNodeActivity | filter:isVideoAnno | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <small class="label label-primary pull-right" style="font-size: 12px; margin-right: 2px; cursor: context-menu;" title="number of link you created"><i class="fa fa-link"></i> {{(myNodeActivity | filter:isLink | filter:isTrue | filter:(resource.treeNodeId._id)).length}}</small>
+                                        <small class="badge bg-light-blue pull-right" style="font-size: 12px; margin-right: 2px; cursor: context-menu;" ng-if="resource.createdBy == created.createdBy" title="you created this content node">mine</small>
                                     </td>
                                 </tr>
                             </tbody>
