Widget - My created & Enrolled widgets sort by date created/enrolled rather than alphabetical

--- a/views/my-course/activity-summary.ejs
+++ b/views/my-course/activity-summary.ejs
@@ -14,8 +14,8 @@
                     </div>
                     <div class="box-footer no-padding">
                         <ul class="nav nav-stacked">
-                            <li><a href="#">Course Enrolled <span class="pull-right badge bg-blue">{{courseEnrolled.length}}</span></a></li>
-                            <li><a href="#">Course Created <span class="pull-right badge bg-aqua">{{courseCreated.length}}</span></a></li>
+                            <li><a style="cursor: default">Course Enrolled <span class="pull-right badge bg-blue">{{courseEnrolled.length}}</span></a></li>
+                            <li><a style="cursor: default">Course Created <span class="pull-right badge bg-aqua">{{courseCreated.length}}</span></a></li>
                         </ul>
                     </div>
                 </div>
