--- a/views/my-course/courses-breakdown.ejs
+++ b/views/my-course/courses-breakdown.ejs
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
         <div ng-if="courseEnrolled.length == 0" style="font-weight: 400; margin-top: 10px;">You are not enrolled in any courses yet</div>
         <div class="box-group" id="accordion">
-            <div class="panel box box-primary" ng-repeat="enrolled in courseEnrolled | orderBy: 'course.name'">
+            <div class="panel box box-primary" ng-repeat="enrolled in courseEnrolled | orderBy: '-dateUpdated'">
                 <div class="box-header with-border">
                     <h4 class="box-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{$index}}" aria-expanded="false" class="collapsed">
