--- a/views/my-course/created-courses.ejs
+++ b/views/my-course/created-courses.ejs
@@ -2,7 +2,7 @@
     <div class="col-xs-12">
         <div ng-if="courseCreated.length == 0" style="font-weight: 400; margin-top: 10px;">you have not created any courses yet</div>
         <div class="box-group" id="accordion-created">
-            <div class="panel box box-primary" ng-repeat="created in courseCreated | orderBy: 'name'">
+            <div class="panel box box-primary" ng-repeat="created in courseCreated | orderBy: '-dateAdded'">
                 <div class="box-header with-border">
                     <h4 class="box-title">
                         <a data-toggle="collapse" data-parent="#accordion-created" href="#collapse-created{{$index}}" aria-expanded="false" class="collapsed">
