--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -78,7 +78,7 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-6"><img src="/img/video.png" style="width:100%">
                         </div>
-                        <div class="col-xs-12 col-sm-6">Implemented by M. Momchil.<br>
+                        <div class="col-xs-12 col-sm-6">Implemented by M. Marinov.<br>
 
                         </div>
                     </div>
@@ -95,40 +95,55 @@
                 </div>
             </div>
             <div class="box">
-                <div class="box-header"><h4>Additional Team Members</h4>
+                <div class="box-header"><h4>Footprint</h4>
                 </div>
                 <div class="box-body">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
-                            <ul>
-                                <li>Ahmed Mohamed Fahmy Yousef (M.Sc.)
-                                </li>
-                            </ul>
+                            <img src="/img/footprint.png">
+                            </div>
+                                <div class="col-xs-12 col-sm-6"> Implemented by S. Oleksandr<br> <br>
+                                    Visual Learning Analytics with heatmaps that can improve interaction with learning materials and support users.
+                                    As a plugin on a video player and embedded PDF reader, users can see which part of a content that are viewed most.
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-header"><h4>Technologies</h4>
-                </div>
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <ul>
-                                <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
-                                <li>MongoDB, Mongoose</li>
-                                <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
-                                <li>GridStack, JSPlumb, QuillJS</li>
-                                <li>Angular and many others</li>
-                                <li>PDF.js</li>
-                                <li>Videogular</li>
-                                <li>FootprintJS</li>
-                                <li>ChartJS</li>
-                            </ul>
+                    <div class="box">
+                        <div class="box-header"><h4>Past Team Members</h4>
+                        </div>
+                        <div class="box-body">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <ul>
+                                        <li>Dr. Ahmed Mohamed Fahmy Yousef (Fayoum University, Egypt)
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                    <div class="box">
+                        <div class="box-header"><h4>Technologies</h4>
+                        </div>
+                        <div class="box-body">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <ul>
+                                        <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
+                                        <li>MongoDB, Mongoose</li>
+                                        <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
+                                        <li>GridStack, JSPlumb, QuillJS</li>
+                                        <li>Angular and many others</li>
+                                        <li>PDF.js</li>
+                                        <li>Videogular</li>
+                                        <li>FootprintJS</li>
+                                        <li>ChartJS</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
         </section>
     </div>
 </div><!-- ./wrapper -->
