change "rows" in pagination. to able to edit

--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -130,6 +130,7 @@
 
 
                     <pagination total-rows="coursesLength"
+                                terms="Courses"
                                 set-reset="paginationReset()"
                                 limit="12"
                                 use-search="false"
