--- a/views/admin-lte/course/discussion/discussion.ejs
+++ b/views/admin-lte/course/discussion/discussion.ejs
@@ -55,6 +55,7 @@
                 <pagination total-rows="topicsLength"
                             set-reset="paginationReset()"
                             limit="10"
+                            terms="Discussions"
                             use-search="false"
                             current-page="{{currentPage}}"
                             sort-by="{{sortBy}}"
