--- a/views/admin-lte/treeNode/links/links.ejs
+++ b/views/admin-lte/treeNode/links/links.ejs
@@ -66,6 +66,7 @@
                 </ul>
 
                 <pagination total-rows="linksLength()"
+                            terms="Links"
                             set-reset="paginationReset()"
                             limit="10"
                             use-search="false"
